objects/PDI_Collaboration_Countries__c.object
<CustomObject>
    <fields>
        <fullName>Country1__c</fullName>
        <label>Country1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country2__c</fullName>
        <label>Country2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country3__c</fullName>
        <label>Country3</label>
        <type>TextArea</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Used for differentiating PDI Collaboration East and West Countries on case.</description>
    <label>PDI Collaboration Countries</label>
</CustomObject>